Service layer, component registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.profiles.active=test
 spring.jpa.open-in-view=true
 
 // caso esqueça alguma outra aplicacao rodando server.port = 8090
+server.port=8090
